# shapir

./: .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
src/: error.rs  lib.rs
src/api/: mod.rs  multi_option.rs
src/api/items/: content.rs  item.rs  kind.rs  mod.rs  path.rs
src/api/shares/: access_right.rs  config.rs  kind.rs  mod.rs  share.rs
src/api/users/: mod.rs  user_id.rs
src/connection/: builder.rs  connection.rs  helper.rs  mod.rs  settings.rs  url.rs
src/error/: mod.rs  prelude.rs  service_error.rs
src/odata/: mod.rs  parameters.rs  query_options.rs
